--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <title>Resume</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -55,8 +54,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>&lt; [ Home ]&nbsp;</a></li><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Qualifications</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#step2-18">Expertise</a><a class="dropdown-item text-white display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="dropdown-item text-white display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="dropdown-item text-white display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="dropdown-item text-white text-primary display-4" href="page3.html" aria-expanded="false">Education</a></div>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html" aria-expanded="false">&nbsp;Home&nbsp;</a></li><li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Qualifications</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="index.html#step2-18">Expertise</a><a class="dropdown-item text-white display-4" href="index.html#step1-19" aria-expanded="false">Skills &amp; Knowledge</a><a class="dropdown-item text-white display-4" href="index.html#content8-11" aria-expanded="false">Qualities</a><a class="dropdown-item text-white display-4" href="index.html#progress-bars1-16" aria-expanded="false">Personality</a><a class="dropdown-item text-white text-primary display-4" href="page3.html" aria-expanded="false">Education</a></div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link dropdown-toggle text-white display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">
@@ -100,7 +99,8 @@
             <div class="col-12 col-lg-10">
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Objectives</strong></h1>
                 
-                <p class="mbr-text mbr-white mbr-fonts-style display-7">- To obtain a position where my strong organizational skill sets and the ability to work well with people will grow.<br> <br>- To demonstrate my history of knowledge in construction and development, which includes occupational health and safety, maintenance of essential services, and managing communal facilities. <br><br>- And to gain a higher level of responsibility and work experience using my skills in negotiation, customer service, and leadership.
+                <p class="mbr-text mbr-white mbr-fonts-style display-7">- To obtain a position where my strong organizational skill sets and the ability to work well with people will grow.<br> <br>- To demonstrate my history of knowledge in construction and development, which includes occupational health and safety, maintenance of essential services, and managing communal facilities. <br><br>- And to gain a higher level of responsibility and work experience using my skills in negotiation, customer service, and leadership.<br><br><strong>Experience in the industry:
+</strong><br><em>Facilities Management</em> : <em>more than <strong>5 years</strong></em><br><em>Property Management : more than <strong>4&nbsp;years</strong></em><br><em>Business Development&nbsp;</em>:<em> more than <strong>12 years</strong></em><br><br>
                 </p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="index.html#features1-1o"><span class="mobi-mbri mobi-mbri-idea mbr-iconfont mbr-iconfont-btn"></span>see my skill sets !</a> <a class="btn btn-success-outline display-4" href="assets/files/Jonathan-Aragones.Resume.2020.pdf" target="_blank"><span class="mobi-mbri mobi-mbri-download-2 mbr-iconfont mbr-iconfont-btn"></span>download my CV</a></div>
             </div>
@@ -956,8 +956,7 @@ all physical aspects, including creating and sustaining safe and productive envi
                     </div>
                 </div> 
                 <div class="mbr-crt-title pt-3">
-                    <h4 class="card-title py-2 mbr-fonts-style display-7"><strong>
-                        Administractive</strong></h4>
+                    <h4 class="card-title py-2 mbr-fonts-style display-7"><strong>Administrative</strong><br></h4>
                 </div>                 
             </div>
 
@@ -1214,7 +1213,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">This site</a> was built with Mobirise website themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to design your own site - <a href="https://mobirise.site/x" style="color:#aaa;">Click now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
