--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@ ConnectFacilities
             <div class="row align-items-center">
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2"><strong>Current Role
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Recent Role
 </strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">Since 2015 - Current
 <br><strong>- Multi Sites Building &amp; Facilities Manager 
@@ -840,7 +840,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2015 - 2017 (Previous)<br></p>
+                        <p class="mbr-timeline-date display-7">2015 - 2017&nbsp;<br></p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -879,7 +879,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2015 - 2017 (Previous)</p>
+                        <p class="mbr-timeline-date display-7">2015 - 2017&nbsp;</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -916,7 +916,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2017 - Current</p>
+                        <p class="mbr-timeline-date display-7">2017 - 2021</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -948,7 +948,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2015 - Current</p>
+                        <p class="mbr-timeline-date display-7">2015 - 2021</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -979,7 +979,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2015 - Current</p>
+                        <p class="mbr-timeline-date display-7">2015 - 2021</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -1010,7 +1010,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             <div class="row timeline-element first-separline mb-5">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
-                        <p class="mbr-timeline-date display-7">2017 - Current</p>
+                        <p class="mbr-timeline-date display-7">2020 - 2021</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
@@ -1347,7 +1347,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free builder - <a href="https://mobirise.site/p" style="color:#aaa;">Click now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">Page</a> was made with Mobirise web themes</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/as-pie-progress/jquery-as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
