--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ Preparing for chairman and readers.<br></p>
   <div class="container">
     <h2 class="pb-3 mbr-fonts-style mbr-white align-center display-1"><strong>
         Performance</strong></h2>
-    <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style mbr-white align-center display-5">What will you say about Jon?&nbsp;</h3>
+    <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style mbr-white align-center display-5">What would you say about Jon?&nbsp;</h3>
     <div class="col-md-10 testimonials-container"> 
       
 
@@ -804,7 +804,7 @@ Preparing for chairman and readers.<br></p>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Recommendation Letter</strong><br><strong><br></strong></h1>
-                <h2 class="mbr-section-subtitle mbr-fonts-style mbr-white mb-3 display-5">How is Jon's performance?<br><br></h2>
+                <h2 class="mbr-section-subtitle mbr-fonts-style mbr-white mb-3 display-5">What is Jon's overall performance at Connect Facilities?<br><br></h2>
                 <p class="mbr-text mbr-fonts-style mbr-white display-7">Jonathan Aragones has been employed by Connect Facilities since March 2015 and he has
 developed to become a building manager within our team. Over the past five years Jonathan has
 managed multiple sites within our portfolio and has developed strong relationships with OC
@@ -823,8 +823,8 @@ ethic, and he is always willing to assist where required.
 with IT services and improvements. In addition to this he has been responsible for contractor
 maintenance &amp; compliance, Project coordination and signing off budget requirements for all building
 jobs and compliance.
-<br><br>Over the past four years we have seen Jonathan grow and enhancehis skills and | therefore offer my
-recommendation of Jonathan Aragonesto any perspective employer and wish him all the best for the
+<br><br>Over the past four years we have seen Jonathan grow and enhance his skills and I therefore offer my
+recommendation of Jonathan Aragones to any perspective employer and wish him all the best for the
 future.
 <br><br>Kind Regards,
 <br><strong>Vince Raso
@@ -1346,7 +1346,7 @@ all physical aspects, including creating and sustaining safe and productive envi
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Built</a> with Mobirise free theme</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/as-pie-progress/as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Made</a> with Mobirise css web theme</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/as-pie-progress/as-pie-progress.min.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
